fixed mac browsers not responsive

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,14 +29,14 @@ body {
   font-family: geo;
   line-height: 1.5;
   display: flex;
-  height: 100dvh;
-  width: 100dvw;
+  min-height: 100dvh;
   display: grid;
   place-content: center;
+  overflow: hidden;
   // background-color: red;
 }
 .container {
-  height: 100dvh;
+  min-height: 100dvh;
   width: 100dvw;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@ body {
 
 .header {
   background-color: skyblue;
-  flex-basis: 35dvh;
+  flex-basis: 35rem;
   display: flex;
   flex-direction: column;
   align-items: center;
